--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "prefer-stable": true,
     "require": {
         "PHP": ">=5.3",
-        "sntools/core": "*"
+        "sntools/core": "*",
+        "greenlion/php-sql-parser": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.5.x",
