--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "PHP": ">=5.3",
         "sntools/core": "*",
-        "greenlion/php-sql-parser": "*"
+        "greenlion/php-sql-parser": "*",
+        "jakeasmith/http_build_url": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.5.x",
