--- a/composer.json
+++ b/composer.json
@@ -34,5 +34,10 @@
         "psr-4": {
             "SNDatabase\\Tests\\": "tests/"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "5.3"
+        }
     }
 }
